--- a/.github/workflows/master_web01akshaylin3d.yml
+++ b/.github/workflows/master_web01akshaylin3d.yml
@@ -1,7 +1,8 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
+# More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
 
-name: Build and deploy Node.js app to Azure Web App - web01akshaylin3d
+name: Build and deploy Python app to Azure Web App - web01akshaylin3d
 
 on:
   push:
@@ -16,25 +17,31 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Node.js version
-        uses: actions/setup-node@v3
+      - name: Set up Python version
+        uses: actions/setup-python@v1
         with:
-          node-version: '20.x'
+          python-version: '3.12'
 
-      - name: npm install, build, and test
+      - name: Create and start virtual environment
         run: |
-          npm install
-          npm run build --if-present
-          npm run test --if-present
+          python -m venv venv
+          source venv/bin/activate
+      
+      - name: Install dependencies
+        run: pip install -r requirements.txt
+        
+      # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
 
-      - name: Upload artifact for deployment job
+      - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v3
         with:
-          name: node-app
-          path: release.zip
+          name: python-app
+          path: |
+            release.zip
+            !venv/
 
   deploy:
     runs-on: ubuntu-latest
@@ -49,23 +56,23 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v3
         with:
-          name: node-app
+          name: python-app
 
       - name: Unzip artifact for deployment
         run: unzip release.zip
+
       
       - name: Login to Azure
         uses: azure/login@v1
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_5FBB12B03E424F6AB0B05B826770F307 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_C7D017DE775B4AAEA402E667B0AA832E }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_184224177CEE4DA38F9FCE6920E22920 }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_4F5D15720C564D8E8986DDC129832A99 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_9890688D851F41D0A3296E38BFF0A5F6 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_4555A748F97B46409CA3AD1BE1B1B1D6 }}
 
       - name: 'Deploy to Azure Web App'
-        id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
+        id: deploy-to-webapp
         with:
           app-name: 'web01akshaylin3d'
           slot-name: 'Production'
-          package: .
           
